--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Dulce Encuentro Pastelería</title>
-    <link rel="shortcut icon" href="favico.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../css/estilos.css" />
   </head>
   <body>
@@ -36,56 +36,54 @@
     <main>Carrito</main>
 
     <footer>
-      <a href="#">
-        <img
-          class="logo"
-          src="../assets/img/dulce_encuentro_logo.svg"
-          width="320px"
-          height="120px"
-          alt="Logo Dulce Encuentro Pastelería"
-        />
-      </a>
-      <nav>
-        <ul>
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="./productos.html">Productos</a></li>
-          <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
-      </nav>
-      <nav>
-        <ul>
-          <li>
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
-          </li>
-          <li>
-            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-          </li>
-          <li>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-          </li>
-        </ul>
-      </nav>
-      <a href=""><i class="fa-brands fa-whatsapp"></i></a>
-      <div>
-        <form action="">
-          <input
-            type="email"
-            placeholder="Tu correo electrónico"
-            id="emailSuscriptor"
-            name="emailSuscriptor"
+      <div class="footerContainer">
+        <!-- Logo Primer Hijo -->
+        <a href="../index.html">
+          <img
+            class="logo"
+            src="../assets/img/dulce_encuentro_logo.svg"
+            alt="Logo Dulce Encuentro Pastelería"
           />
-          <input type="submit" value="suscribirse" />
-        </form>
+        </a>
+        <!-- Navegación, Segundo Hijo -->
+        <nav class="footerNav">
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="./productos.html">Productos</a></li>
+            <li><a href="./contacto.html">Contacto</a></li>
+            <li>
+              <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Nav de redes sociales Tercer Hijo -->
+        <nav class="footerNet">
+          <ul class="netIcon">
+            <li>
+              <a href=""><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-instagram"></i></a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Datos de contacto -->
+        <address class="footerAddres">
+          <p>Calle Las Heras 4000, Mar del Plata, Argentina.</p>
+          <p>(+549) 223333333</p>
+          <p>dulceencuentropasteleria@gmail.com</p>
+        </address>
+        <!-- Copyright -->
+        <div class="footerCopy">
+          <p>
+            Dulce Encuentro Pastelería 2024 &copy; Todos los derechos reservados
+          </p>
+        </div>
+        <a href=""><i class="fa-brands fa-whatsapp"></i></a>
       </div>
-      <!-- Datos de contacto -->
-      <address>
-        <p>Calle Las Heras 4000, Mar del Plata, Argentina.</p>
-        <p>(+549) 223333333</p>
-        <p>dulceencuentropasteleria@gmail.com</p>
-      </address>
-      <p>
-        Dulce Encuentro Pastelería 2024 &copy; Todos los derechos reservados
-      </p>
     </footer>
   </body>
 </html>
