sección postres destacados modificado

--- a/index.html
+++ b/index.html
@@ -34,13 +34,20 @@
       </nav>
     </header>
     <main>
-      <h1>Dulce Encuentro Pastelería</h1>
       <!-- Imagen de Fondo -->
+      <h1>Dulce Encuentro Pastelería</h1>
+      <h2>Un abrazo dulce entre dos culturas: Venezuela y Argentina</h2>
       <section class="mainSection">
-        <div>
-          <h2>Un abrazo dulce entre dos culturas: Venezuela y Argentina</h2>
-        </div>
         <div class="mainText">
+          <p>
+            Nuestras creaciones son perfectas para cualquier ocasión, desde una
+            reunión familiar hasta un evento especial.
+          </p>
+          <a href="./pages/productos.html"
+            >Deleitate con nuestros postres más Icónicos</a
+          >
+        </div>
+        <div class="mainTextMobile">
           <p>
             Nuestras creaciones son perfectas para cualquier ocasión, desde una
             reunión familiar hasta un evento especial.
@@ -54,53 +61,56 @@
       <!-- Postres destacados -->
       <section class="postresDestacados">
         <h2>Nuestros postres destacados</h2>
-        <!--         <h3> Déjate llevar por la magia de nuestros postres y
-          descubre el sabor auténtico de Venezuela y Argentina.
-        </h3> -->
-        <div>
-          <h3>Dulce de lechoza (papaya en Argentina)</h3>
-          <img
-            src="./assets/img/1-Dulce-de-Lechosa-1.jpg"
-            alt="dulce de papaya Venezolano"
-          />
-          <p>2500$ ARS</p>
-          <a href="">Agregar al carrito</a>
-        </div>
-        <div>
-          <h3>Torta Tres Leches</h3>
-          <img
-            src="./assets/img/torta-tres-leches.jpg"
-            alt="Torta Tres Leches, estilo Venezolano"
-          />
-          <p>5000$ ARS</p>
-          <a href=""> Agregar al carrito </a>
-        </div>
-        <div>
-          <h3>Besos de Coco</h3>
-          <img
-            src="./assets/img/besos_de_coco.jpg"
-            alt="Besos de Coco, dulce Venezolano"
-          />
-          <p>800$ ARS c/u</p>
-          <a href=""> Agregar al carrito </a>
-        </div>
-        <div>
-          <h3>Chocotorta</h3>
-          <img
-            src="./assets/img/chocotorta-destacada.jpg"
-            alt="Chocotorta clásica Argentina"
-          />
-          <p>5000$ ARS</p>
-          <a href=""> Agregar al carrito </a>
-        </div>
-        <div>
-          <h3>Alfajores con dulce de leche clásicos</h3>
-          <img
-            src="./assets/img/alfajores.jpg"
-            alt="Alfajores de Maicena Clásicos"
-          />
-          <p>800$ ARS c/u</p>
-          <a href=""> Agregar al carrito </a>
+        <div class="galeriaDestacados">
+          <div class="cardDestacados">
+            <img
+              src="./assets/img/1-Dulce-de-Lechosa-1.jpg"
+              alt="dulce de papaya Venezolano"
+            />
+            <h3>Dulce de lechoza</h3>
+            <h4>2500$ ARS</h4>
+            <a href="">Agregar al carrito</a>
+          </div>
+
+          <div class="cardDestacados">
+            <img
+              src="./assets/img/Torta-3-Leches.jpg"
+              alt="Torta Tres Leches, estilo Venezolano"
+            />
+            <h3>Torta Tres Leches</h3>
+            <h4>3500$ ARS</h4>
+            <a href="">Agregar al carrito</a>
+          </div>
+
+          <!-- <div class="cardDestacados">
+            <img
+              src="./assets/img/besos_de_coco.jpg"
+              alt="Besos de Coco, dulce Venezolano"
+            />
+            <h3>Besos de Coco</h3>
+            <h4>800$ ARS</h4>
+            <a href="">Agregar al carrito</a>
+          </div>
+ -->
+          <div class="cardDestacados">
+            <img
+              src="./assets/img/chocotorta-destacada.jpg"
+              alt="Chocotorta clásica"
+            />
+            <h3>Chocotorta</h3>
+            <h4>800$ ARS</h4>
+            <a href="">Agregar al carrito</a>
+          </div>
+
+          <div class="cardDestacados">
+            <img
+              src="./assets/img/alfajores.jpg"
+              alt="Alfajores de Maicena Clásicos"
+            />
+            <h3>Alfajores Clásicos</h3>
+            <h4>800$ ARS</h4>
+            <a href="">Agregar al carrito</a>
+          </div>
         </div>
       </section>
 
@@ -216,12 +226,12 @@
           <p>dulceencuentropasteleria@gmail.com</p>
         </address>
         <!-- Copyright -->
+        <a href=""><i class="fa-brands fa-whatsapp"></i></a>
         <div class="footerCopy">
           <p>
             Dulce Encuentro Pastelería 2024 &copy; Todos los derechos reservados
           </p>
         </div>
-        <a href=""><i class="fa-brands fa-whatsapp"></i></a>
       </div>
     </footer>
   </body>
