contenido destacado actualizado

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -33,7 +33,7 @@
         </ul>
       </nav>
     </header>
-    <main>Contacto</main>
+    <main>Contacto probando</main>
 
     <footer>
       <div class="footerContainer">
