Update Nosotros Section

--- a/index.html
+++ b/index.html
@@ -82,16 +82,6 @@
             <a href="">Agregar al carrito</a>
           </div>
 
-          <!-- <div class="cardDestacados">
-            <img
-              src="./assets/img/besos_de_coco.jpg"
-              alt="Besos de Coco, dulce Venezolano"
-            />
-            <h3>Besos de Coco</h3>
-            <h4>800$ ARS</h4>
-            <a href="">Agregar al carrito</a>
-          </div>
- -->
           <div class="cardDestacados">
             <img
               src="./assets/img/chocotorta-destacada.jpg"
@@ -163,23 +153,38 @@
           </p>
         </div>
       </section>
+
       <!-- Quienes somos -->
       <section class="nosotros">
         <h2>Conócenos un poco</h2>
-        <div>
-          <img
-            src="./assets/img/ownerpastry.jpg"
-            alt="Dueñas de la pasteleria"
-          />
+        <div class="contenedorNosotros">
+          <div class="nosotrosImg"></div>
+          <div class="nosotrosText">
+            <p>
+              Somos apasionados de la repostería, trayendo lo mejor de los
+              sabores venezolanos y argentinos a tu mesa. Con cada receta,
+              buscamos conectar historias, tradiciones y momentos dulces que
+              alegren tus días.
+            </p>
+          </div>
         </div>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae
-          odit provident alias beatae! Impedit ipsum molestiae odio perferendis
-          nulla quaerat velit, laudantium asperiores! Voluptate, voluptates.
-          Doloremque aliquam ipsa deserunt nemo.
-        </p>
-        <a href="./pages/contacto.html">CONTACTANOS</a>
       </section>
+
+      <!--       <section class="nosotros">
+        <h2>Conócenos un poco</h2>
+        <div class="contenedorNosotros">
+          <div class="nosotrosImg"></div>
+
+          <div class="nosotrosText">
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Repudiandae odit provident alias beatae! Impedit ipsum molestiae
+              odio perferendis nulla quaerat velit, laudantium asperiores!
+              Voluptate, voluptates. Doloremque aliquam ipsa deserunt nemo.
+            </p>
+          </div>
+        </div>
+      </section> -->
     </main>
 
     <footer>
