--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Dulce Encuentro Pastelería</title>
     <link rel="shortcut icon" href="favico.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/estilos.css" />
+    <script defer src="./js/index.js"></script>
   </head>
   <body>
     <header class="headerContainer">
@@ -21,6 +22,7 @@
         />
       </a>
       <nav>
+        <button class="menu-toggle" aria-label="Toggle navigation">☰</button>
         <ul class="menu">
           <li class="menuElement"><a href="#">Inicio</a></li>
           <li><a href="./pages/productos.html">Productos</a></li>
@@ -35,8 +37,10 @@
     </header>
     <main>
       <!-- Imagen de Fondo -->
-      <h1>Dulce Encuentro Pastelería</h1>
-      <h2>Un abrazo dulce entre dos culturas: Venezuela y Argentina</h2>
+      <h1 class="mainTitle">Dulce Encuentro Pastelería</h1>
+      <h2 class="mainTitle2">
+        Un abrazo dulce entre dos culturas: Venezuela y Argentina
+      </h2>
       <section class="mainSection">
         <div class="mainText">
           <p>
