--- a/pages/productos.html
+++ b/pages/productos.html
@@ -10,6 +10,7 @@
     <title>Dulce Encuentro Pastelería</title>
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../css/estilos.css" />
+    <script defer src="../js/index.js"></script>
   </head>
   <body>
     <header class="headerContainer">
@@ -21,6 +22,7 @@
         />
       </a>
       <nav>
+        <button class="menu-toggle" aria-label="Toggle navigation">☰</button>
         <ul>
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="./productos.html">Productos</a></li>
