--- a/pages/productos.html
+++ b/pages/productos.html
@@ -23,7 +23,7 @@
       </a>
       <nav>
         <button class="menu-toggle" aria-label="Toggle navigation">☰</button>
-        <ul>
+        <ul class="menu">
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="./productos.html">Productos</a></li>
           <li><a href="./contacto.html">Contacto</a></li>
