adding style to reseñas section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Dulce Encuentro Pastelería</title>
-    <link rel="shortcut icon" href="favico.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/estilos.css" />
     <script defer src="./js/index.js"></script>
   </head>
@@ -111,50 +111,46 @@
       <!-- Reseñas -->
       <section class="reseñas">
         <h2>Nuestros clientes hablan por nosotros</h2>
-        <div class="ctaReseñas">
-          <p>Celebra la vida con Dulce Encuentro Pastelería.</p>
-          <a href="./pages/productos.html">
-            Revisa nuestro delicioso catálogo de postres
-          </a>
-        </div>
-        <div>
-          <h3>Andrés con sus abuelos</h3>
-          <img
-            src="./assets/img/client_abuelos.jpg"
-            alt="Abuelos celebrando con torta"
-          />
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae
-            labore unde iusto minus? Aspernatur veniam aliquid sequi,
-            accusantium reprehenderit laboriosam. Quia, totam magnam quam quae
-            error voluptatibus illum. Atque, nesciunt?
-          </p>
-        </div>
-        <div>
-          <h3>Laura celebrando su Cumple</h3>
-          <img
-            src="./assets/img/cliente_chees.png"
-            alt="Cliente con cheescake feliz"
-          />
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae
-            labore unde iusto minus? Aspernatur veniam aliquid sequi,
-            accusantium reprehenderit laboriosam. Quia, totam magnam quam quae
-            error voluptatibus illum. Atque, nesciunt?
-          </p>
-        </div>
-        <div>
-          <h3>Estefania disfrutando nuestras deliciosas galletas</h3>
-          <img
-            src="./assets/img/client_cookies.jpg"
-            alt="Cliente con galletas feliz"
-          />
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae
-            labore unde iusto minus? Aspernatur veniam aliquid sequi,
-            accusantium reprehenderit laboriosam. Quia, totam magnam quam quae
-            error voluptatibus illum. Atque, nesciunt?
-          </p>
+
+        <a class="boton" href="./pages/productos.html">
+          ¡Descubre nuestra selección de postres irresistibles!
+        </a>
+
+        <div class="galeriaClientes">
+          <div class="tarjetaCliente">
+            <img
+              src="./assets/img/client_abuelos.jpg"
+              alt="Abuelos celebrando con torta"
+            />
+            <h3>Momentos inolvidables</h3>
+            <p>
+              Andrés endulzó la celebración de sus abuelos con nuestra torta
+              especial.
+            </p>
+          </div>
+
+          <div class="tarjetaCliente">
+            <img
+              src="./assets/img/client-alfahor.jpeg"
+              alt="Cliente con cheescake feliz"
+            />
+            <h3>Un dulce placer</h3>
+            <p>
+              Laura encontró la felicidad en cada bocado de nuestros alfajores.
+            </p>
+          </div>
+
+          <div class="tarjetaCliente">
+            <img
+              src="./assets/img/client_cookies.jpg"
+              alt="Cliente con galletas feliz"
+            />
+            <h3>Sabores que enamoran</h3>
+            <p>
+              Estefanía disfruta cada pedacito de nuestras galletas recién
+              horneadas.
+            </p>
+          </div>
         </div>
       </section>
 
@@ -173,22 +169,6 @@
           </div>
         </div>
       </section>
-
-      <!--       <section class="nosotros">
-        <h2>Conócenos un poco</h2>
-        <div class="contenedorNosotros">
-          <div class="nosotrosImg"></div>
-
-          <div class="nosotrosText">
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Repudiandae odit provident alias beatae! Impedit ipsum molestiae
-              odio perferendis nulla quaerat velit, laudantium asperiores!
-              Voluptate, voluptates. Doloremque aliquam ipsa deserunt nemo.
-            </p>
-          </div>
-        </div>
-      </section> -->
     </main>
 
     <footer>
