--- a/pages/productos.html
+++ b/pages/productos.html
@@ -37,57 +37,80 @@
     </header>
     <main>Productos</main>
 
-    <footer>
-      <div class="footerContainer">
-        <!-- Logo Primer Hijo -->
-        <a href="../index.html">
-          <img
-            class="logo"
-            src="../assets/img/dulce_encuentro_logo.svg"
-            alt="Logo Dulce Encuentro Pastelería"
-          />
-        </a>
-        <!-- Navegación, Segundo Hijo -->
-        <nav class="footerNav">
-          <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./productos.html">Productos</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
-            <li>
-              <a href="./carrito.html"
-                ><i class="fa-solid fa-cart-shopping"></i
-              ></a>
-            </li>
-          </ul>
-        </nav>
-        <!-- Nav de redes sociales Tercer Hijo -->
-        <nav class="footerNet">
-          <ul class="netIcon">
-            <li>
-              <a href=""><i class="fa-brands fa-facebook"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-            </li>
-            <li>
-              <a href=""><i class="fa-brands fa-instagram"></i></a>
-            </li>
-          </ul>
-        </nav>
-        <!-- Datos de contacto -->
-        <address class="footerAddres">
-          <p>Calle Las Heras 4000, Mar del Plata, Argentina.</p>
-          <p>(+549) 223333333</p>
-          <p>dulceencuentropasteleria@gmail.com</p>
-        </address>
-        <!-- Copyright -->
-        <div class="footerCopy">
-          <p>
-            Dulce Encuentro Pastelería 2024 &copy; Todos los derechos reservados
-          </p>
+    <footer class="footerContainer">
+      <div class="footer-main-container">
+        <div class="footer-first-container">
+          <!-- Logo -->
+          <a href="#">
+            <img
+              class="logo"
+              src="../assets/img/dulce_encuentro_logo.svg"
+              alt="Logo Dulce Encuentro Pastelería"
+            />
+          </a>
+          <!-- Navegación-->
+          <nav>
+            <ul>
+              <li><a href="#">Inicio</a></li>
+              <li><a href="./pages/productos.html">Productos</a></li>
+              <li><a href="./pages/contacto.html">Contacto</a></li>
+              <li>
+                <a href="./pages/carrito.html"
+                  ><i class="fa-solid fa-cart-shopping"></i
+                ></a>
+              </li>
+            </ul>
+          </nav>
         </div>
-        <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+
+        <div class="footer-second-container">
+          <!-- Nav de redes sociales -->
+          <nav>
+            <ul>
+              <li>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+              </li>
+              <li>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+              </li>
+            </ul>
+          </nav>
+
+          <!-- Formulario  -->
+          <div>
+            <form action="">
+              <input
+                type="email"
+                placeholder="Tu correo electrónico"
+                id="emailSus"
+                name="emailSus"
+              />
+              <input type="submit" value="Suscribirse" />
+            </form>
+          </div>
+        </div>
+
+        <div class="footer-third-container">
+          <!-- Addres -->
+          <address>
+            <p>Calle Las Heras 4000, Mar del Plata, Argentina.</p>
+            <p>(+549) 223333333</p>
+            <p>dulceencuentropasteleria@gmail.com</p>
+          </address>
+        </div>
       </div>
+
+      <div>
+        <a href="" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      </div>
+
+      <!-- Copyright  -->
+      <p class="footerCopy">
+        Dulce Encuentro Pastelería 2024 &copy; Todos los derechos reservados
+      </p>
     </footer>
   </body>
 </html>
