--- a/pages/productos.html
+++ b/pages/productos.html
@@ -35,7 +35,39 @@
         </ul>
       </nav>
     </header>
-    <main>Productos</main>
+    <main>
+      <section class="galeriaGridDulces">
+        <img
+          class="hijo_1"
+          src="../assets/img/1-Dulce-de-Lechosa-1.jpg"
+          alt="Dulce de Lechoza"
+        />
+
+        <img
+          class="hijo_2"
+          src="../assets/img/bread-1284438_1280.jpg"
+          alt="Medialunas Clásicas"
+        />
+
+        <img
+          class="hijo_3"
+          src="../assets/img/Torta-3-Leches.jpg"
+          alt="Torta Tres Leches"
+        />
+
+        <img
+          class="hijo_4"
+          src="../assets/img/alfajores.jpg"
+          alt="Alfajores Clásicos"
+        />
+
+        <img
+          class="hijo_5"
+          src="../assets/img/chocotorta-destacada.jpg"
+          alt="Chocotorta"
+        />
+      </section>
+    </main>
 
     <footer class="footerContainer">
       <div class="footer-main-container">
