Agrego interactividad en el carrito con JavaScript

--- a/index.html
+++ b/index.html
@@ -73,7 +73,14 @@
             />
             <h3>Dulce de lechoza</h3>
             <h4>2500$ ARS</h4>
-            <a href="">Agregar al carrito</a>
+            <a
+              class="btn-agregar"
+              id="Lechoza"
+              data-nombre="Dulce de Lechoza"
+              data-precio="2500.00"
+              href="#"
+              >Agregar al carrito</a
+            >
           </div>
 
           <div class="cardDestacados">
@@ -83,7 +90,14 @@
             />
             <h3>Torta Tres Leches</h3>
             <h4>3500$ ARS</h4>
-            <a href="">Agregar al carrito</a>
+            <a
+              class="btn-agregar"
+              id="TresLeches"
+              data-nombre="Torta Tres Leches"
+              data-precio="3500.00"
+              href="#"
+              >Agregar al carrito</a
+            >
           </div>
 
           <div class="cardDestacados">
@@ -93,7 +107,14 @@
             />
             <h3>Chocotorta</h3>
             <h4>800$ ARS</h4>
-            <a href="">Agregar al carrito</a>
+            <a
+              class="btn-agregar"
+              id="Chocotorta"
+              data-nombre="Chocotorta"
+              data-precio="800.00"
+              href="#"
+              >Agregar al carrito</a
+            >
           </div>
 
           <div class="cardDestacados">
@@ -103,7 +124,14 @@
             />
             <h3>Alfajores Clásicos</h3>
             <h4>800$ ARS</h4>
-            <a href="">Agregar al carrito</a>
+            <a
+              class="btn-agregar"
+              id="AlfajorClásico"
+              data-nombre="Alfajores Clásicos"
+              data-precio="800.00"
+              href="#"
+              >Agregar al carrito</a
+            >
           </div>
         </div>
       </section>
@@ -112,7 +140,7 @@
       <section class="reseñas">
         <h2>Nuestros clientes hablan por nosotros</h2>
 
-        <a class="boton" href="./pages/productos.html">
+        <a href="./pages/productos.html">
           ¡Descubre nuestra selección de postres irresistibles!
         </a>
 
@@ -246,4 +274,6 @@
         Dulce Encuentro Pastelería 2024 &copy; Todos los derechos reservados
       </p>
     </footer>
+    <script src="js/agregar_carrito.js"></script>
+  </body>
 </html>
